Add lifetimes stuff

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,5 @@
-[package]
-name = "lifetimekata"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+members = [
+        "exercises/02_lifetimes_explained/exercise"
+]
