Push lots of updates, and the mdbook

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,12 @@
 [workspace]
 
 members = [
-        "exercises/02_lifetimes_explained/exercise"
+        "exercises/02_lifetimes_explained/exercise",
+        "exercises/02_lifetimes_explained/solution",
+        "exercises/04_mutable_references_and_containers/exercise",
+        "exercises/04_mutable_references_and_containers/solutions",
+        "exercises/05_lifetimes_on_types/exercise",
+        "exercises/05_lifetimes_on_types/solutions",
+        "exercises/08_special_lifetimes/exercise",
+        "exercises/08_special_lifetimes/solutions",
 ]
