--- a/exercises/05_lifetimes_on_types/solutions/Cargo.toml
+++ b/exercises/05_lifetimes_on_types/solutions/Cargo.toml
@@ -1,11 +1,7 @@
 [package]
-name = "solution_05"
+name = "soln05"
 version = "0.1.0"
 edition = "2021"
-
-[[bin]]
-name = "solution_05"
-path = "src/main.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
